# seella

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.sh  docker-compose.yml
src/: cli.rs  csv.rs  data_source.rs  db.rs  event.rs  lib.rs  main.rs  records.rs  session.rs
src/cli/: csv.rs  db.rs  mod.rs
tests/: 74ff67c0-397b-11ee-8ca4-9688db6cc0f1.snapshot  basic.rs  cassandra.rs  test.sh  util.rs
tests/data/: cassandra_events.csv  cassandra_sessions.csv  events.csv  load-db.cql  sessions.csv
