[package]
name = "seella"
version = "0.1.0"
edition = "2021"
authors = ["Karl Voss <karl.p.voss@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
csv = "1.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
