[package]
name = "seella"
description = "A tool for visualising the traces emitted by ScyllaDB"
version = "0.1.0"
edition = "2021"
authors = ["Karl Voss <karl.p.voss@gmail.com>"]
repository = "https://github.com/karlpvoss/seella"
readme = "README.md"
license = "MIT"
keywords = ["scylla", "scylladb", "tracing", "visualise"]
categories = ["development-tools::debugging", "visualization", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive"] }
csv = "1.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
