[package]
name = "seella"
description = "A tool for visualising the traces emitted by ScyllaDB"
version = "0.3.1"
edition = "2021"
authors = ["Karl Voss <karl.p.voss@gmail.com>"]
repository = "https://github.com/karlpvoss/seella"
readme = "README.md"
license = "MIT"
keywords = ["scylla", "scylladb", "tracing", "visualise"]
categories = ["development-tools::debugging", "visualization", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde"] }
clap = { version = "4.4.4", features = ["derive"] }
csv = "1.2.2"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.48"
scylla = "0.9.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
